# stepwise

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: release.yml  test.yml  test_and_release.yml
dirty_water2/: __init__.py  cli.py  config.py  printer.py  protocol.py
dirty_water2/builtins/: echo
docs/: Makefile  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  planning_protocols.rst  python_api.rst  sharing_protocols.rst  using_protocols.rst  writing_protocols.rst
docs/api/: config.rst  errors.rst  load.rst  master_mix.rst  protocol.rst  quantity.rst  reaction.rst  reagent.rst  solvent.rst  tabulate.rst
docs/config/: printer.rst  search.rst
stepwise/: __init__.py  __main__.py  cli.py  config.py  errors.py  format.py  library.py  printer.py  protocol.py  quantity.py  reaction.py  table.py  testing.py  utils.py
stepwise/builtins/: conditions.py  custom  custom.py  cut  echo.py  reaction.py  reactions.py  split  step.py
stepwise/builtins/future/: reaction.py
stepwise/cli/: config.py  edit.py  go.py  ls.py  main.py  metric.py  note.py  skip.py  stash.py  sub.py  swap.py  which.py
stepwise/cli/stash/: __init__.py  main.py  model.py  pickler.py
stepwise/format/: __init__.py  format.py  lists.py  misc.py  table.py
stepwise/reaction/: __init__.py  deprecated.py  mix.py  reaction.py  reactions.py
tests/: param_helpers.py  pytest.ini  test_cli.nt  test_cli.py  test_cli.toml  test_cli_skip.nt  test_cli_skip.py  test_cli_stash.py  test_config.nt  test_config.py  test_config.toml  test_format.nt  test_format.py  test_format.toml  test_format_table.nt  test_format_table.py  test_library.nt  test_library.py  test_library.toml  test_printer.nt  test_printer.py  test_printer.toml  test_protocol.nt  test_protocol.py  test_protocol.toml  test_quantity.py  test_reaction.nt  test_reaction.py  test_reaction.toml  test_reactions.nt  test_reactions.py  test_reactions_mix.nt  test_reactions_mix.py  test_table.py  test_table.toml  test_utils.nt  test_utils.py  utils.py
tests/dummy_home/: reactions.csv  reactions.xlsx
tests/dummy_home/.config/stepwise/: conf.toml
tests/dummy_home/protocols/: b.txt  nested.sh
tests/dummy_library/collection_1/: script_x.sh
tests/dummy_library/collection_1/subdir/: protocol_b.txt
tests/dummy_library/collection_2/: protocol_z.txt
tests/dummy_library/collection_3/: _lib.py  protocol_txt.txt  script_argv.py  script_echo.sh  script_import.py  script_libc.py  script_load.py  script_main.py  script_nested.sh  script_py.py  script_sh.sh  script_stdin.sh  script_subproc.py  script_subproc_nested.py  script_subproc_stdin.py
tests/profiling/: cli_imports.sh  prof.py
